# tinytinyrenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
fileFormats/: CMakeLists.txt  FileWriter_impl.hpp
fileIO/: FileReader.h  FileReader_impl.hpp  FileUtils.h  FileUtils_impl.hpp  FileWriter.h  FileWriter_impl.hpp
geometryFormats/: OBJGeometry.cpp  OBJGeometry.h
imageFormats/: Color.h  TGAImage.cpp  TGAImage.h
lineAlgorithm/: CMakeLists.txt  LineRasterizeAlgorithm.cpp  LineRasterizeAlgorithm.h
renderUtils/: AABB.h++  AttachmentInfo.h  CMakeLists.txt  CommandBuff.cpp  CommandBuff.h  CommandBuff_impl.hpp  Image.h  ImageFormat.h  Memory.cpp  Memory.h  Mesh.h  Pipeline.h  Render.h  RenderBuffer.h  RenderCmd.h  RenderInfo.h  Render_impl.hpp  SIMD.h  Viewport.h
triangleAlgorithm/: CMakeLists.txt  Triangle.cpp  Triangle.h
